# board-emu

./: .gitignore  Makefile  README.md  config.mk
apps/: CMakeLists.txt  Makefile
apps/mips-disasm/: CMakeLists.txt  Makefile  main.cpp
apps/speccy-emu/: CMakeLists.txt  Makefile  main.cpp
apps/speccy-test/: CMakeLists.txt  Makefile  main.cpp
apps/z80-disasm/: 123  234  CMakeLists.txt  Makefile  TEST48.ASM
build.mk/: colors.mk  targets.mk
dumps/zx_spectrum/tests/: urls
lib/: CMakeLists.txt  Makefile
lib/libemu_core/: CMakeLists.txt  Makefile
lib/libemu_core/include/core/: board.h  bus.h  debug.h  instruction.h  port.h  processor.h  registers.h
lib/libemu_core/include/core/memory/: cell.h  segment.h
lib/libemu_core/include/core/memory/segment/: iterator.h
lib/libemu_core/include/memory/: cell.h  segment.h
lib/libemu_core/include/memory/segment/: iterator.h
lib/libemu_core/src/: board.cpp  bus.cpp  instruction.cpp  processor.cpp
lib/libemu_core/src/memory/: segment.cpp
lib/libemu_mips/: CMakeLists.txt  Makefile
lib/libemu_mips/include/mips/: instruction.h
lib/libemu_mips/include/mips/instruction/: factory.h
lib/libemu_mips/include/mips/memory/: cell.h
lib/libemu_mips/src/: instruction.cpp
lib/libemu_mips/src/instruction/: cop.cpp  factory.cpp  immediate.cpp  jump.cpp  register.cpp  simple.cpp
lib/libemu_mips/src/instruction/immediate/: addiu.cpp  lui.cpp
lib/libemu_mips/src/instruction/immediate/include/: addiu.h  load.h  lui.h  save.h
lib/libemu_mips/src/instruction/include/: cop.h  immediate.h  jump.h  register.h  simple.h
lib/libemu_mips/src/instruction/simple/include/: nop.h
lib/libemu_speccy/: CMakeLists.txt  Makefile
lib/libemu_speccy/include/speccy/: board.h
lib/libemu_speccy/include/speccy/board/: board128k.h  board48k.h
lib/libemu_speccy/src/: board.cpp
lib/libemu_speccy/src/board/: board128k.cpp  board48k.cpp
lib/libemu_z80/: CMakeLists.txt  Makefile
lib/libemu_z80/include/z80/: instruction.h  processor.h  registers.h
lib/libemu_z80/include/z80/instruction/: factory.h
lib/libemu_z80/include/z80/memory/: cell.h  cell8.h
lib/libemu_z80/include/z80/memory/segment__/: iterator.h
lib/libemu_z80/src/: instruction.cpp  processor.cpp
lib/libemu_z80/src/instruction/: __primary.cpp  factory.cpp  xxBITxx.cpp  xxEXTEDxx.cpp
lib/libemu_z80/src/instruction/include/: ___one_byte_instruction.h  primary.h  xx80xx.h  xxBITxx.h  xxEXTEDxx.h
lib/libemu_z80/src/instruction/primary/: cp.cpp  dec.cpp  di.cpp  djnz.cpp  ei.cpp  ex.cpp  halt.cpp  inc.cpp  jr.cpp  ld.cpp  or.cpp  out.cpp  rst.cpp  xor.cpp
lib/libemu_z80/src/instruction/primary/include/: cp.h  dec.h  di.h  djnz.h  ei.h  ex.h  halt.h  inc.h  jr.h  ld.h  nop.h  or.h  out.h  rst.h  xor.h
lib/libemu_z80/src/instruction/xx80xx/: out.cpp
lib/libemu_z80/src/instruction/xx80xx/include/: out.h
lib/libemu_z80/src/instruction/xxBITxx/: rl.cpp  rlc.cpp  rr.cpp  rrc.cpp  srl.cpp
lib/libemu_z80/src/instruction/xxBITxx/include/: rl.h  rlc.h  rr.h  rrc.h  srl.h
lib/libemu_z80/src/instruction/xxEXTEDxx/: cp.cpp  in.cpp  ld.cpp  out.cpp
lib/libemu_z80/src/instruction/xxEXTEDxx/include/: cp.h  in.h  ld.h  out.h
